feat: init background service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="error_lostconnection_error_ml">Utracono połączenie - ML</string>
     <string name="error_lostconnection_camera">Utracono połączenie - Kamera</string>
 
+    <string name="notification_channel_name">Powiadomienia o wejściach</string>
+
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
